tests/harness/errors/153_internal_import_error.eu
{ import: "testdata/153_lib.eu" }

result: priv-helper(1)
